--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -5,3 +5,36 @@
 body.Posts {
   // Place scoped styles here
 }
+
+.posts {
+  margin-bottom: 15px;
+  
+  .post {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    p {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+  .post + .post {
+    border-bottom: none;
+  }
+}
+
+.post {
+  .author {
+    background-color: #eee;
+    border-radius: 5px;
+    float: right;
+    margin-bottom: 5px;
+    margin-right: 8px;
+    padding: 8px 15px;
+  }
+  p {
+    font-size: 118%;
+    line-height: 140%;
+    padding: 5px 18px;
+  }
+}
