--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -2,7 +2,7 @@
     <title><%= (content_for?(:title)) ? yield(:title) + " | " + t(:site_title) : t(:site_title) + " | " + t(:site_tagline) %></title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <%= stylesheet_link_tag    "application", "bootstrap", "bootstrap-custom" %>
+    <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
 
