--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,17 +1,16 @@
-- content_for :page_title, t('.title')
-- content_for :page_tagline, t('.subtitle')
-%p
-  %b Title:
-  = @post.title
-%p
-  %b Subtitle:
-  = @post.subtitle
-%p
-  %b Body:
-  = @post.body
-%p
-  %b User:
-  = link_to @post.user.username, @post.user
+- content_for :page_title, @post.title
+- content_for :page_tagline, @post.subtitle
+.post
+  .author
+    Posted by
+    = link_to @post.user.display, @post.user
+    on
+    = l @post.created_at, format: :long
+  %div{:style=>"clear:both;"}
+  %p= markdown_to_html @post.body
 .links.well
   = link_to 'Edit', edit_post_path(@post), class: "btn"
   = link_to 'Back', posts_path, class: "btn"
+%h3 Comments
+.comments
+  .comment
