Update structure of profile dropdown

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -37,14 +37,15 @@
             %li= link_to 'Translation Center', translations_path
     - if current_user        
       %ul.nav.secondary-nav
-        %li.dropdown{ 'data-dropdown' => 'dropdown' }
-          %a.dropdown-toggle{:href=>"#"}
-            = gravatar_for current_user, 16, { style: "vertical-align:middle;" }
+        %li.dropdown
+          = link_to profile_path, { class: 'dropdown-toggle', data: { target: '#', toggle: 'dropdown' } } do
+            = gravatar_for current_user, 16, { style: "vertical-align: middle;" }
             &nbsp;
             = current_user.username
+            %b.caret
           %ul.dropdown-menu
-            %li= link_to 'Profile', '/profile'
-            %li= link_to 'Profile', '/profile'
+            %li= link_to 'Profile', profile_path
+            %li= link_to 'Profile', profile_path
             %li.divider
             %li= link_to 'Logout', logout_path
     - else
