--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -52,10 +52,10 @@ body {
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the navbar */
 }
 footer [class*="span"] {
-    -moz-border-radius: 6px;
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     background-color: #FFFFFF;
     padding: 10px 20px;
+    @include border-radius(6px);
+    @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.15));
 }
 a {
   color: #00438a;
@@ -108,12 +108,8 @@ body.display {
   background-color: #fff;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-          box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  @include border-radius(0 0 6px 6px);
+  @include box-shadow(0 1px 2px rgba(0,0,0,.15));
 }
 
 /* Page header tweaks */
