--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -46,48 +46,24 @@ $secondary-color: #FFD1DC;
 
 html, body {
   background-color: lighten($main-color, 20%);
-  font-family: JunctionRegular, "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: JunctionRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body {
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the navbar */
-}
-footer [class*="span"] {
-    background-color: #FFFFFF;
-    padding: 10px 20px;
-    @include border-radius(6px);
-    @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.15));
-}
-a {
-  color: #00438a;
-}
-
-.navbar-inner {
-  background-color: $main-color;
-  background-image: -khtml-gradient(linear, left top, left bottom, from($main-color), to(darken($main-color, 12%)));
-  background-image: -moz-linear-gradient(top, $main-color, darken($main-color, 12%));
-  background-image: -ms-linear-gradient(top, $main-color, darken($main-color, 12%));
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $main-color), color-stop(100%, darken($main-color, 12%)));
-  background-image: -webkit-linear-gradient(top, $main-color, darken($main-color, 12%));
-  background-image: -o-linear-gradient(top, $main-color, darken($main-color, 12%));
-  background-image: linear-gradient(top, $main-color, darken($main-color, 12%));
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$main-color', endColorstr='darken($main-color, 12%)', GradientType=0);
-}
-.navbar .nav > li > a,
-.navbar .brand {
-  color: #f5f5f5;
-}
-.container > footer p {
-  text-align: center; /* center align it with the container */
 }
 body.display {
   padding-top: 60px;
 }
 
-.navbar div > ul .menu-dropdown, 
-.nav .menu-dropdown, 
-.navbar div > ul .dropdown-menu, 
-.nav .dropdown-menu {
-  background-color: $main-color;
+footer [class*="span"] {
+    background-color: $white;
+    padding: 10px 20px;
+    @include border-radius(6px);
+    @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.15));
+}
+
+.container > footer p {
+  text-align: center; /* center align it with the container */
 }
 .navbar div > ul .menu-dropdown .divider, 
 .nav .menu-dropdown .divider, 
@@ -97,15 +73,9 @@ body.display {
     border-color: $main-color;
 }
 
-.navbar .dropdown-menu a:hover, .dropdown-menu a:hover, .navbar .dropdown-menu a.hover, .dropdown-menu a.hover {
-    background-color: darken($main-color, 30%);
-    background-image: -moz-linear-gradient(center top , darken($main-color, 20%), darken($main-color, 30%));
-    color: #404040;
-}
-
 /* The white background content wrapper */
 .container .content {
-  background-color: #fff;
+  background-color: $white;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
   @include border-radius(0 0 6px 6px);
@@ -117,18 +87,6 @@ body.display {
   background-color: #f5f5f5;
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
-}
-
-/* Styles you shouldn't keep as they are for displaying this base example only */
-.content .span10,
-.content .span4 {
-  min-height: 500px;
-}
-/* Give a quick and non-cross-browser friendly divider */
-.content .span5 {
-  margin-left: 0;
-  padding-left: 19px;
-  border-left: 1px solid #eee;
 }
 
 .navbar .btn {
@@ -164,21 +122,14 @@ form .clearfix .field_with_errors .input-prepend .add-on, form .clearfix .field_
 }
 
 .hero-unit {
-  background-color: #444;
   background-image: url('bg/hero/1.jpg');
-  color: #fff;
-  min-height: 300px;
+  min-height: 330px;
   padding-right: 500px;
-  
-  h1 {
-    color: inherit;
-  }
 }
 
 .featured {
   background-color: $main-color;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
+  @include border-radius(6px);
   padding: 10px 20px;
 }
 
