--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -25,8 +25,8 @@
       = f.label :user_id
       .input= f.collection_select :user_id, @users, :id, :username
   .actions.well
-    = f.submit class: "btn primary large"
+    = f.submit class: "btn btn-primary btn-large"
     - unless @post.new_record?
-      = link_to 'Nevermind, back to the post', @post, class: 'btn large'
+      = link_to 'Nevermind, back to the post', @post, class: 'btn btn-large'
     - else
-      = link_to 'Nevermind, back to viewing the posts', posts_path, class: 'btn large'
+      = link_to 'Nevermind, back to viewing the posts', posts_path, class: 'btn btn-large'
