--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -1,3 +1,4 @@
-%h1 Finish registration
-%p We weren't able to get all of the required information from the provider
+- content_for :page_title, 'Finish your registration'
+- content_for :page_tagline, 'Almost there!'
+%p Sorry, but we weren't able to get all of the required information from the provider. Please look over the information below to finish registering.
 = render 'form'
