--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -18,7 +18,7 @@ body.Posts {
       padding-right: 15px;
     }
   }
-  .post + .post {
+  .post:last-child {
     border-bottom: none;
   }
 }
@@ -26,7 +26,7 @@ body.Posts {
 .post {
   .author {
     background-color: #eee;
-    border-radius: 5px;
+    @include border-radius(5px);
     float: right;
     margin-bottom: 5px;
     margin-right: 8px;
@@ -41,8 +41,7 @@ body.Posts {
 
 .featured-post {
   background-color: $secondary-color;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
+  @include border-radius(6px);
   padding: 20px;
   
   h3 {
