--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@post) do |f|
+= form_for(@post, html: { class: 'form-horizontal' } ) do |f|
   - if @post.errors.any?
     #error_explanation
       %h2
@@ -8,22 +8,21 @@
         - @post.errors.full_messages.each do |msg|
           %li= msg
   %fieldset
-    %legend
-    .field.clearfix
-      = f.label :title
-      .input= f.text_field :title
-    .field.clearfix
-      = f.label :subtitle
-      .input= f.text_field :subtitle
-    .field.clearfix
-      = f.label :body
-      .input= f.text_area :body
-    .field.clearfix
-      = f.label :teaser
-      .input= f.text_field :teaser
-    .field.clearfix
-      = f.label :user_id
-      .input= f.collection_select :user_id, @users, :id, :username
+    .field.control-group
+      = f.label :title, class: 'control-label'
+      .controls= f.text_field :title
+    .field.control-group
+      = f.label :subtitle, class: 'control-label'
+      .controls= f.text_field :subtitle
+    .field.control-group
+      = f.label :body, class: 'control-label'
+      .controls= f.text_area :body
+    .field.control-group
+      = f.label :teaser, class: 'control-label'
+      .controls= f.text_field :teaser
+    .field.control-group
+      = f.label :user_id, class: 'control-label'
+      .controls= f.collection_select :user_id, @users, :id, :username
   .actions.well
     = f.submit class: "btn btn-primary btn-large"
     - unless @post.new_record?
